[gd_scene load_steps=14 format=3 uid="uid://di665p3dxwouq"]

[ext_resource type="Script" path="res://levels/general level scripts/level.gd" id="1_d7imc"]
[ext_resource type="Resource" uid="uid://bop1n53e3cacp" path="res://levels/level resourses/test_level_resource.tres" id="2_kprov"]
[ext_resource type="Script" path="res://levels/general level scripts/money manager.gd" id="3_83um7"]
[ext_resource type="Script" path="res://levels/general level scripts/level ui.gd" id="4_m4iax"]
[ext_resource type="Texture2D" uid="uid://b8oosejb0lltw" path="res://objects/towers/tower 1/sprites/towerDefense_tile249.png" id="4_urium"]
[ext_resource type="Script" path="res://Button.gd" id="5_mwt7m"]
[ext_resource type="Script" path="res://levels/general level scripts/level maneger.gd" id="7_qqoxf"]
[ext_resource type="PackedScene" uid="uid://cjikln40op8au" path="res://tile_map.tscn" id="8_bow6l"]
[ext_resource type="Script" path="res://levels/general level scripts/enemy maneger.gd" id="9_24thp"]
[ext_resource type="Script" path="res://levels/general level scripts/tower maneger.gd" id="9_iqj7p"]
[ext_resource type="Script" path="res://levels/enemyGoal.gd" id="10_i5k55"]

[sub_resource type="Curve2D" id="Curve2D_1xjsm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 64, 160, -52.7973, 0, 52.7973, 0, 160, 160, -1.41421, -33.9411, 1.41421, 33.9411, 224, 224, -15.4422, -71.8658, 15.4422, 71.8658, 224, 672, 0, 0, 0, 0, 288, 736, -72.7567, 7.42416, 72.7567, -7.42416, 352, 736, 0, 0, 0, 0, 416, 672, -0.296966, 40.3874, 0.296966, -40.3874, 416, 288, -31.4784, 0, 31.4784, 0, 480, 224, -24.6482, -1.18787, 24.6482, 1.18787, 992, 224, -1.18787, -35.042, 1.18787, 35.042, 1056, 288, 10.7878, -18.2939, -10.7878, 18.2939, 1056, 352, 0, 0, 0, 0, 1056, 352, 73.0321, -100.268, -73.0321, 100.268, 864, 544, 1.85197, -20.3716, -1.85197, 20.3716, 800, 640, -1.28596, -36.8721, 1.28596, 36.8721, 800, 704, 0, 0, 0, 0, 864, 736, 0, 0, 0, 0, 1920, 736)
}
point_count = 18

[sub_resource type="CircleShape2D" id="CircleShape2D_d7sg5"]

[node name="level test" type="Node2D"]
script = ExtResource("1_d7imc")
level_resourse = ExtResource("2_kprov")

[node name="money manager" type="Node" parent="." groups=["wants level resource"]]
script = ExtResource("3_83um7")

[node name="level ui" type="Control" parent="." groups=["wants level resource"]]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_m4iax")

[node name="Button" type="Button" parent="level ui"]
layout_mode = 0
offset_top = 960.0
offset_right = 128.0
offset_bottom = 1088.0
text = "100cr"
icon = ExtResource("4_urium")
script = ExtResource("5_mwt7m")

[node name="credits_label" type="RichTextLabel" parent="level ui"]
layout_mode = 0
offset_right = 288.0
offset_bottom = 96.0
theme_override_font_sizes/normal_font_size = 36
text = "credots 1000"

[node name="health_label" type="RichTextLabel" parent="level ui"]
layout_mode = 0
offset_left = 256.0
offset_right = 544.0
offset_bottom = 96.0
theme_override_font_sizes/normal_font_size = 36
text = "health 1000"

[node name="level maneger" type="Node2D" parent="."]
script = ExtResource("7_qqoxf")

[node name="TileMap" parent="level maneger" instance=ExtResource("8_bow6l")]
z_index = -1

[node name="enemy maneger" type="Node" parent="level maneger" groups=["wants level resource"]]
script = ExtResource("9_24thp")

[node name="spawn timer" type="Timer" parent="level maneger/enemy maneger"]
wait_time = 0.1

[node name="Path2D" type="Path2D" parent="level maneger/enemy maneger"]
curve = SubResource("Curve2D_1xjsm")

[node name="spawnPoint" type="Node2D" parent="level maneger/enemy maneger"]
position = Vector2(106, 158)

[node name="enemyGoal" type="Node2D" parent="level maneger/enemy maneger" groups=["wants level resource"]]
position = Vector2(1854, 738)
script = ExtResource("10_i5k55")

[node name="Area2D" type="Area2D" parent="level maneger/enemy maneger/enemyGoal"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level maneger/enemy maneger/enemyGoal/Area2D"]
shape = SubResource("CircleShape2D_d7sg5")

[node name="tower maneger" type="Node" parent="level maneger" groups=["wants level resource"]]
script = ExtResource("9_iqj7p")

[connection signal="button_up" from="level ui/Button" to="level ui/Button" method="_on_button_up"]
[connection signal="tower_1_button_pressed" from="level ui/Button" to="level maneger/tower maneger" method="_on_tower_button_pressed"]
[connection signal="timeout" from="level maneger/enemy maneger/spawn timer" to="level maneger/enemy maneger" method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="level maneger/enemy maneger/enemyGoal/Area2D" to="level maneger/enemy maneger/enemyGoal" method="_on_area_2d_body_entered"]
